--- a/assets/carousel.css
+++ b/assets/carousel.css
@@ -293,19 +293,19 @@
 }
 
 .palette-one .carousel__dot:after {
-  background: var(--color-primary-30, #0B1A264D);
+  background: var(--color-primary-30, #1A33334D);
 }
 
 .palette-one .carousel__dot.active:after {
-  background: var(--color-primary, #0B1A26);
+  background: var(--color-primary, #1A3333);
 }
 
 .palette-one .carousel__btn {
-  border-color: var(--color-border, #0B1A2626);
+  border-color: var(--color-border, #1A333326);
 }
 
 .palette-one .carousel__btn path {
-  fill: var(--color-primary, #0B1A26);
+  fill: var(--color-primary, #1A3333);
 }
 
 .palette-two .carousel__dot:after {
@@ -326,7 +326,7 @@
 
 .palette-one .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn,
 .palette-one .carousel__edges .carousel__btn {
-  background: var(--background-overlay-08, #0B1A2614);
+  background: var(--background-overlay-08, #1A333314);
   border-color: transparent;
 }
 
@@ -337,7 +337,7 @@
 
 .palette-one .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn path,
 .palette-one .carousel__edges .carousel__btn path {
-  fill: var(--background-overlay, #0B1A26);
+  fill: var(--background-overlay, #1A3333);
 }
 
 .palette-one .carousel__edges .show-overlay-dark ~ .carousel__navigation .carousel__btn path {
@@ -346,7 +346,7 @@
 
 .palette-one .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot:after,
 .palette-one .carousel__edges .carousel__dot:after {
-  background: var(--background-overlay-45, #0B1A2673);
+  background: var(--background-overlay-45, #1A333373);
 }
 
 .palette-one .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot:after {
@@ -355,7 +355,7 @@
 
 .palette-one .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot.active:after,
 .palette-one .carousel__edges .carousel__dot.active:after {
-  background: var(--background-overlay, #0B1A26);
+  background: var(--background-overlay, #1A3333);
 }
 
 .palette-one .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot.active:after {
@@ -364,7 +364,7 @@
 
 .palette-one .carousel__edges .show-overlay-light ~ .carousel__counter,
 .palette-one .carousel__edges .carousel__counter {
-  color: var(--background-overlay, #0B1A26);
+  color: var(--background-overlay, #1A3333);
 }
 
 .palette-one .carousel__edges .show-overlay-dark ~ .carousel__counter {
@@ -373,7 +373,7 @@
 
 .palette-two .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn,
 .palette-two .carousel__edges .carousel__btn {
-  background: var(--background-overlay-2-08, #0B1A2614);
+  background: var(--background-overlay-2-08, #1A333314);
   border-color: transparent;
 }
 
@@ -384,7 +384,7 @@
 
 .palette-two .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn path,
 .palette-two .carousel__edges .carousel__btn path {
-  fill: var(--background-overlay-2, #0B1A26);
+  fill: var(--background-overlay-2, #1A3333);
 }
 
 .palette-two .carousel__edges .show-overlay-dark ~ .carousel__navigation .carousel__btn path {
@@ -393,7 +393,7 @@
 
 .palette-two .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot:after,
 .palette-two .carousel__edges .carousel__dot:after {
-  background: var(--background-overlay-2-45, #0B1A2673);
+  background: var(--background-overlay-2-45, #1A333373);
 }
 
 .palette-two .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot:after {
@@ -402,7 +402,7 @@
 
 .palette-two .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot.active:after,
 .palette-two .carousel__edges .carousel__dot.active:after {
-  background: var(--background-overlay-2, #0B1A26);
+  background: var(--background-overlay-2, #1A3333);
 }
 
 .palette-two .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot.active:after {
@@ -411,7 +411,7 @@
 
 .palette-two .carousel__edges .show-overlay-light ~ .carousel__counter,
 .palette-two .carousel__edges .carousel__counter {
-  color: var(--background-overlay-2, #0B1A26);
+  color: var(--background-overlay-2, #1A3333);
 }
 
 .palette-two .carousel__edges .show-overlay-dark ~ .carousel__counter {
@@ -547,11 +547,11 @@
   }
 
   .palette-one .carousel__btn:hover {
-    border-color: var(--color-primary, #0B1A26);
+    border-color: var(--color-primary, #1A3333);
   }
 
   .palette-one .carousel__dot:hover:after {
-    background: var(--color-primary, #0B1A26);
+    background: var(--color-primary, #1A3333);
   }
 
   .palette-two .carousel__btn:hover {
@@ -564,7 +564,7 @@
 
   .palette-one .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn:hover,
   .palette-one .carousel__edges .carousel__btn:hover {
-    border-color: var(--background-overlay, #0B1A26);
+    border-color: var(--background-overlay, #1A3333);
   }
 
   .palette-one .carousel__edges .show-overlay-dark ~ .carousel__navigation .carousel__btn:hover {
@@ -573,7 +573,7 @@
 
   .palette-one .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot:hover:after,
   .palette-one .carousel__edges .carousel__dot:hover:after {
-    background: var(--background-overlay, #0B1A26);
+    background: var(--background-overlay, #1A3333);
   }
 
   .palette-one .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot:hover:after {
@@ -582,7 +582,7 @@
 
   .palette-two .carousel__edges .show-overlay-light ~ .carousel__navigation .carousel__btn:hover,
   .palette-two .carousel__edges .carousel__btn:hover {
-    border-color: var(--background-overlay-2, #0B1A26);
+    border-color: var(--background-overlay-2, #1A3333);
   }
 
   .palette-two .carousel__edges .show-overlay-dark ~ .carousel__navigation .carousel__btn:hover {
@@ -591,7 +591,7 @@
 
   .palette-two .carousel__edges .show-overlay-light ~ .carousel__pagination .carousel__dot:hover:after,
   .palette-two .carousel__edges .carousel__dot:hover:after {
-    background: var(--background-overlay-2, #0B1A26);
+    background: var(--background-overlay-2, #1A3333);
   }
 
   .palette-two .carousel__edges .show-overlay-dark ~ .carousel__pagination .carousel__dot:hover:after {
