--- a/assets/locations.css
+++ b/assets/locations.css
@@ -12,7 +12,7 @@
 }
 
 .palette-two.locations__wrapper {
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
 }
 
 @media (min-width: 992px) {
