--- a/snippets/breadcrumbs.liquid
+++ b/snippets/breadcrumbs.liquid
@@ -39,19 +39,19 @@
     }
 
     .palette-one .breadcrumbs {
-      color: var(--color-third, #0B1A2666);
+      color: var(--color-third, #1A333366);
     }
 
     .palette-one .breadcrumbs path {
-      fill: var(--color-primary, #0B1A26);
+      fill: var(--color-primary, #1A3333);
     }
 
     .palette-one .breadcrumbs a:hover {
-      color: var(--color-primary, #0B1A26);
+      color: var(--color-primary, #1A3333);
     }
 
     .palette-one .breadcrumbs__name {
-      color: var(--color-outline, #F4B841);
+      color: var(--color-outline, #53C787);
     }
 
     .palette-two .breadcrumbs {
