--- a/snippets/icon.liquid
+++ b/snippets/icon.liquid
@@ -17,7 +17,7 @@
 
 {% style %}
   .palette-one .fa, .palette-one .far {
-    color: var(--color-primary, #0B1A26);
+    color: var(--color-primary, #1A3333);
   }
   .palette-two .fa, .palette-two .far {
     color: var(--color-primary-2, #FFFFFF);
