--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -11,10 +11,7 @@
     {%- if settings.primary_color != blank -%}
       --color-primary: {{- settings.primary_color -}};
       --color-primary-30: {{- settings.primary_color | append: "4D" -}};
-      --color-primary-45: {{- settings.primary_color | append: "73" -}};
-      --color-primary-80: {{- settings.primary_color | append: "CC" -}};
       --color-primary-hover: {{- settings.primary_color | append: "52" -}};
-      --color-primary-active: {{- settings.primary_color | append: "8F" -}};
       --color-third: {{- settings.primary_color | append: "66"-}};
       --color-fourth: {{- settings.primary_color | append: "26" -}};
       --color-image-placeholder: {{- settings.primary_color | append: "26" -}};
@@ -30,16 +27,12 @@
       --background-accent: {{- settings.accent_background -}};
       --background-accent-00: {{- settings.accent_background | append: "00" -}};
       --background-accent-hover: {{- settings.accent_background | append: "CC" -}};
-      --background-accent-active: {{- settings.accent_background | append: "BA" -}};
-      --background-accent-secondary-hover: {{- settings.accent_background | append: "52" -}};
-      --background-accent-secondary-active: {{- settings.accent_background | append: "8F" -}};
+      --background-accent-secondary-hover: {{- settings.accent_background | append: "1A" -}};
     {%- else -%}
       --background-accent: {{- branding_color -}};
       --background-accent-00: {{- branding_color | append: "00" -}};
       --background-accent-hover: {{- branding_color | append: "CC" -}};
-      --background-accent-active: {{- branding_color | append: "BA" -}};
-      --background-accent-secondary-hover: {{- branding_color | append: "52" -}};
-      --background-accent-secondary-active: {{- branding_color | append: "8F" -}};
+      --background-accent-secondary-hover: {{- branding_color | append: "1A" -}};
     {%- endif -%}
 
     {%- if settings.accent_color != blank -%}
@@ -51,11 +44,9 @@
     {%- if settings.accent_outline != blank -%}
       --color-outline: {{- settings.accent_outline -}};
       --color-outline-hover: {{- settings.accent_outline | append: "CC" -}};
-      --color-outline-active: {{- settings.accent_outline | append: "BA" -}};
     {%- else -%}
       --color-outline: {{- branding_color -}};
       --color-outline-hover: {{- branding_color | append: "CC" -}};
-      --color-outline-active: {{- branding_color | append: "BA" -}};
     {%- endif -%}
 
     {%- if settings.overlay_background != blank -%}
@@ -63,7 +54,6 @@
       --background-overlay-00: {{- settings.overlay_background | append: "00" -}};
       --background-overlay-08: {{- settings.overlay_background | append: "14" -}};
       --background-overlay-45: {{- settings.overlay_background | append: "73" -}};
-      --background-overlay-gray: {{- settings.overlay_background | append: "59" -}};
     {%- endif -%}
 
     {%- if settings.overlay_color != blank -%}
@@ -71,7 +61,6 @@
       --color-overlay-00: {{- settings.overlay_color | append: "00" -}};
       --color-overlay-08: {{- settings.overlay_color | append: "14" -}};
       --color-overlay-45: {{- settings.overlay_color | append: "73" -}};
-      --color-overlay-gray: {{- settings.overlay_color | append: "59" -}};
     {%- endif -%}
 
     {%- if settings.background_2 != blank -%}
@@ -88,7 +77,6 @@
       --color-primary-2-45: {{- settings.primary_color_2 | append: "73" -}};
       --color-primary-2-80: {{- settings.primary_color_2 | append: "CC" -}};
       --color-primary-2-hover: {{- settings.primary_color_2 | append: "52" -}};
-      --color-primary-2-active: {{- settings.primary_color_2 | append: "8F" -}};
       --color-third-2: {{- settings.primary_color_2 | append: "66"-}};
       --color-fourth-2: {{- settings.primary_color_2 | append: "47" -}};
       --color-image-placeholder-2: {{- settings.primary_color_2 | append: "47" -}};
@@ -104,16 +92,12 @@
       --background-accent-2: {{- settings.accent_background_2 -}};
       --background-accent-2-00: {{- settings.accent_background_2 | append: "00" -}};
       --background-accent-2-hover: {{- settings.accent_background_2 | append: "CC" -}};
-      --background-accent-2-active: {{- settings.accent_background_2 | append: "BA" -}};
-      --background-accent-secondary-2-hover: {{- settings.accent_background_2 | append: "52" -}};
-      --background-accent-secondary-2-active: {{- settings.accent_background_2 | append: "8F" -}};
+      --background-accent-secondary-2-hover: {{- settings.accent_background_2 | append: "33" -}};
     {%- else -%}
       --background-accent-2: {{- branding_color -}};
       --background-accent-2-00: {{- branding_color | append: "00" -}};
       --background-accent-2-hover: {{- branding_color | append: "CC" -}};
-      --background-accent-2-active: {{- branding_color | append: "BA" -}};
-      --background-accent-secondary-2-hover: {{- branding_color | append: "52" -}};
-      --background-accent-secondary-2-active: {{- branding_color | append: "8F" -}};
+      --background-accent-secondary-2-hover: {{- branding_color | append: "33" -}};
     {%- endif -%}
 
     {%- if settings.accent_color_2 != blank -%}
@@ -125,11 +109,9 @@
     {%- if settings.accent_outline_2 != blank -%}
       --color-outline-2: {{- settings.accent_outline_2 -}};
       --color-outline-2-hover: {{- settings.accent_outline_2 | append: "CC" -}};
-      --color-outline-2-active: {{- settings.accent_outline_2 | append: "BA" -}};
     {%- else -%}
       --color-outline-2: {{- branding_color -}};
       --color-outline-2-hover: {{- branding_color | append: "CC" -}};
-      --color-outline-2-active: {{- branding_color | append: "BA" -}};
     {%- endif -%}
 
     {%- if settings.overlay_background_2 != blank -%}
@@ -156,7 +138,6 @@
     {%- if settings.primary_color_3 != blank -%}
       --color-primary-3: {{- settings.primary_color_3 -}};
       --color-primary-3-hover: {{- settings.primary_color_3 | append: "52" -}};
-      --color-primary-3-active: {{- settings.primary_color_3 | append: "8F" -}};
     {%- endif -%}
 
     {%- if settings.secondary_color_3 != blank -%}
@@ -166,11 +147,9 @@
     {%- if settings.accent_background_3 != blank -%}
       --background-accent-3: {{- settings.accent_background_3 -}};
       --background-accent-3-hover: {{- settings.accent_background_3 | append: "BA" -}};
-      --background-accent-3-active: {{- settings.accent_background_3 | append: "A6" -}};
     {%- else -%}
       --background-accent-3: {{- branding_color -}};
       --background-accent-3-hover: {{- branding_color | append: "BA" -}};
-      --background-accent-3-active: {{- branding_color | append: "A6" -}};
     {%- endif -%}
 
     {%- if settings.accent_color_3 != blank -%}
@@ -182,11 +161,25 @@
     {%- if settings.accent_outline_3 != blank -%}
       --color-outline-3: {{- settings.accent_outline_3 -}};
       --color-outline-3-hover: {{- settings.accent_outline_3 | append: "CC" -}};
-      --color-outline-3-active: {{- settings.accent_outline_3 | append: "BA" -}};
     {%- else -%}
       --color-outline-3: {{- branding_color -}};
       --color-outline-3-hover: {{- branding_color | append: "CC" -}};
-      --color-outline-3-active: {{- branding_color | append: "BA" -}};
+    {%- endif -%}
+
+    {%- if settings.overlay_background_3 != blank -%}
+      --background-overlay-3: {{- settings.overlay_background_3 -}};
+      --background-overlay-3-00: {{- settings.overlay_background_3 | append: "00" -}};
+      --background-overlay-3-08: {{- settings.overlay_background_3 | append: "14" -}};
+      --background-overlay-3-45: {{- settings.overlay_background_3 | append: "73" -}};
+      --background-overlay-3-gray: {{- settings.overlay_background_3 | append: "59" -}};
+    {%- endif -%}
+
+    {%- if settings.overlay_color_3 != blank -%}
+      --color-overlay-3: {{- settings.overlay_color_3 -}};
+      --color-overlay-3-00: {{- settings.overlay_color_3 | append: "00" -}};
+      --color-overlay-3-08: {{- settings.overlay_color_3 | append: "14" -}};
+      --color-overlay-3-45: {{- settings.overlay_color_3 | append: "73" -}};
+      --color-overlay-3-gray: {{- settings.overlay_color_3 | append: "59" -}};
     {%- endif -%}
 
     {%- if settings.heading_font != blank -%}
@@ -229,6 +222,14 @@
 
     {%- if settings.animation_duration != blank -%}
       --animation-duration: {{- settings.animation_duration | append: "ms"-}};
+    {%- endif -%}
+
+    {%- if settings.corner_radius == 'square' -%}
+      --border-radius: 0;
+    {%- elsif settings.corner_radius == 'rounded' -%}
+      --border-radius: 8px;
+    {%- elsif settings.corner_radius == 'fully_round' -%}
+      --border-radius: 50px;
     {%- endif -%}
 
     {%- case settings.social_size -%}
