--- a/assets/footer.css
+++ b/assets/footer.css
@@ -93,42 +93,37 @@
 }
 
 .palette-one.footer__wrapper {
-  color: var(--color-primary, #0B1A26);
+  color: var(--color-primary, #1A3333);
   background: var(--background-primary, #FFFFFF);
-  border-top: 1px solid var(--color-border, #0B1A2626);
+  border-top: 1px solid var(--color-border, #1A333326);
 }
 
 .palette-one .footer__logo-text,
 .palette-one .footer__menu-heading,
 .palette-one .footer__icons {
-  color: var(--color-primary, #0B1A26);
+  color: var(--color-primary, #1A3333);
 }
 
 .palette-one .footer__menu-list {
-  color: var(--color-secondary, #4E5D78);
+  color: var(--color-secondary, #768585);
 }
 
 .palette-one .footer__copy {
-  color: var(--color-third, #0B1A2666);
+  color: var(--color-third, #1A333366);
 }
 
 .palette-one .footer__menu-link:hover,
 .palette-one .footer__social .social-networks__link:hover {
-  color: var(--color-outline-hover, #F4B841CC);
-}
-
-.palette-one .footer__menu-link:active,
-.palette-one .footer__social .social-networks__link:active {
-  color: var(--color-outline-active, #F4B841BA);
+  color: var(--color-outline-hover, #53C787CC);
 }
 
 .palette-one .footer__bottom {
-  border-top-color: var(--color-border, #0B1A2626);
+  border-top-color: var(--color-border, #1A333326);
 }
 
 .palette-two.footer__wrapper {
   color: var(--color-primary-2, #FFFFFF);
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
   border-top: 1px solid var(--color-border-2, #FFFFFF47);
 }
 
@@ -149,11 +144,6 @@
 .palette-two .footer__menu-link:hover,
 .palette-two .footer__social .social-networks__link:hover {
   color: var(--color-outline-2-hover, #F4B841CC);
-}
-
-.palette-two .footer__menu-link:active,
-.palette-two .footer__social .social-networks__link:active {
-  color: var(--color-outline-2-active, #F4B841BA);
 }
 
 .palette-two .footer__bottom {
