--- a/assets/form.css
+++ b/assets/form.css
@@ -116,7 +116,7 @@
 }
 
 .form__info .success i {
-  color: var(--color-outline, #F4B841);
+  color: var(--color-outline, #53C787);
 }
 
 .form__info .error {
@@ -170,36 +170,36 @@ div.form__block--error .form__textarea:focus {
 
 .palette-one .form__label {
   background: var(--background-primary, #FFFFFF);
-  color: var(--color-secondary, #4E5D78);
+  color: var(--color-secondary, #768585);
 }
 
 .palette-one .form__input,
 .palette-one .form__textarea {
-  color: var(--color-primary, #0B1A26);
+  color: var(--color-primary, #1A3333);
   background: var(--background-primary, #FFFFFF);
-  border-color: var(--color-border, #0B1A2626);
+  border-color: var(--color-border, #1A333326);
 }
 
 .palette-one .form__input:focus,
 .palette-one .form__input:focus-visible,
 .palette-one .form__textarea:focus,
 .palette-one .form__textarea:focus-visible {
-  border-color: var(--background-accent, #F4B841);
+  border-color: var(--background-accent, #1A3333);
 }
 
 .palette-one .form__info .success {
-  border-color: var(--color-border, #0B1A2626);
+  border-color: var(--color-border, #1A333326);
 }
 
 .palette-two .form__label {
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
   color: var(--color-secondary-2, #E1E4E8);
 }
 
 .palette-two .form__input,
 .palette-two .form__textarea {
   color: var(--color-primary-2, #FFFFFF);
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
   border-color: var(--color-border-2, #FFFFFF47);
 }
 
