--- a/assets/header.css
+++ b/assets/header.css
@@ -229,35 +229,29 @@
 }
 
 .palette-one .header__content {
-  color: var(--color-primary, #0B1A26);
+  color: var(--color-primary, #1A3333);
   background: var(--background-primary, #FFFFFF);
-  border-bottom: 1px solid var(--color-border, #0B1A2626);
+  border-bottom: 1px solid var(--color-border, #1A333326);
 }
 
 .palette-one .header__search-reset:after,
 .palette-one .header__search-reset:before {
-  background: var(--color-primary, #0B1A26);
+  background: var(--color-primary, #1A3333);
 }
 
 .palette-one .header__search-reset:hover:after,
 .palette-one .header__search-reset:hover:before {
-  background: var(--color-outline-hover, #F4B841CC);
-}
-
-.palette-one .header__search-reset:active:after,
-.palette-one .header__search-reset:active:before {
-  background: var(--color-outline-active, #F4B841BA);
+  background: var(--color-outline-hover, #53C787CC);
 }
 
 .palette-one .header__search-input {
-  color: var(--color-primary, #0B1A26);
+  color: var(--color-primary, #1A3333);
   background: var(--background-primary, #FFFFFF);
-  border-bottom-color: var(--background-accent, #F4B841);
-  border-color: var(--background-accent, #F4B841);
+  border-color: var(--background-accent, #1A3333);
 }
 
 .palette-one .header__search-input::placeholder {
-  color: var(--color-placeholder, #0B1A2659);
+  color: var(--color-placeholder, #1A333359);
 }
 
 .palette-one .header__search-input:-webkit-autofill,
@@ -267,24 +261,20 @@
 
 .palette-one .header__search-icon g,
 .palette-one .header__search-opener g {
-  stroke: var(--color-primary, #0B1A26);
+  stroke: var(--color-primary, #1A3333);
 }
 
 .palette-one .header__search #search-opener:checked ~ .header__search-opener g {
-  stroke: var(--color-outline, #F4B841);
+  stroke: var(--color-outline, #53C787);
 }
 
 .palette-one .header__search-opener:hover g {
-  stroke: var(--color-outline-hover, #F4B841CC);
-}
-
-.palette-one .header__search-opener:active g {
-  stroke: var(--color-outline-active, #F4B841BA);
+  stroke: var(--color-outline-hover, #53C787CC);
 }
 
 .palette-two .header__content {
   color: var(--color-primary-2, #FFFFFF);
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
   border-bottom: 1px solid var(--color-border-2, #FFFFFF47);
 }
 
@@ -298,14 +288,9 @@
   background: var(--color-outline-2-hover, #F4B841CC);
 }
 
-.palette-two .header__search-reset:active:after,
-.palette-two .header__search-reset:active:before {
-  background: var(--color-outline-2-active, #F4B841BA);
-}
-
 .palette-two .header__search-input {
   color: var(--color-primary-2, #FFFFFF);
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
   border-color: var(--background-accent-2, #F4B841);
 }
 
@@ -315,7 +300,7 @@
 
 .palette-two .header__search-input:-webkit-autofill,
 .palette-two .header__search-input:autofill {
-  box-shadow: inset 0 0 0 150px var(--background-primary-2, #0B1A26) !important;
+  box-shadow: inset 0 0 0 150px var(--background-primary-2, #1A3333) !important;
 }
 
 .palette-two .header__search-icon g,
@@ -331,20 +316,12 @@
   stroke: var(--color-outline-2-hover, #F4B841CC);
 }
 
-.palette-two .header__search-opener:active g {
-  stroke: var(--color-outline-2-active, #F4B841BA);
-}
-
 .palette-two .header__cart .bq-icon-cart::before {
   color: var(--color-primary-2, #FFFFFF);
 }
 
 .palette-two .bq-cart-button:hover .bq-icon-cart::before {
   color: var(--color-outline-2-hover, #F4B841CC);
-}
-
-.palette-two .bq-cart-button:active .bq-icon-cart::before {
-  color: var(--color-outline-2-active, #F4B841BA);
 }
 
 .palette-two .bq-cart-button__line-count {
@@ -479,15 +456,15 @@
   }
 
   .palette-one.header-menu-bottom .header__search-input {
-    border-color: var(--color-primary, #0B1A26);
+    border-color: var(--color-primary, #1A3333);
   }
 
   .palette-one.header-menu-bottom .header__search-input:focus {
-    border-color: var(--background-accent, #F4B841);
+    border-color: var(--background-accent, #1A3333);
   }
 
   .palette-one.header-menu-bottom .header__links:before {
-    background: var(--color-border, #0B1A2626);
+    background: var(--color-border, #1A333326);
   }
 
   .palette-two.header-menu-bottom .header__search-input {
