--- a/assets/logos.css
+++ b/assets/logos.css
@@ -56,15 +56,15 @@
 }
 
 .palette-one .logos__title {
-  color: var(--color-secondary, #4E5D78);
+  color: var(--color-secondary, #768585);
 }
 
 .palette-one .logos__image-wrapper.no-image:after {
-  background: var(--color-image-placeholder, #0B1A2626);
+  background: var(--color-image-placeholder, #1A333326);
 }
 
 .palette-two.logos__wrapper {
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
 }
 
 .palette-two .logos__title {
