--- a/assets/mosaic.css
+++ b/assets/mosaic.css
@@ -106,26 +106,26 @@
 }
 
 .palette-one.mosaic__wrapper {
-  color: var(--color-secondary, #4E5D78);
+  color: var(--color-secondary, #768585);
   background: var(--background-primary, #FFFFFF);
 }
 
 .palette-one .mosaic__item {
   background: var(--background-primary, #FFFFFF);
-  border-color: var(--color-border, #0B1A2626);
+  border-color: var(--color-border, #1A333326);
 }
 
 .palette-one .mosaic__item-col.no-image {
-  background: var(--color-image-placeholder, #0B1A2626);
+  background: var(--color-image-placeholder, #1A333326);
 }
 
 .palette-one .mosaic__heading,
 .palette-one .mosaic__button.button {
-  color: var(--color-primary, #0B1A26);
+  color: var(--color-primary, #1A3333);
 }
 
 .palette-one .mosaic__button.button path {
-  fill: var(--color-primary, #0B1A26);
+  fill: var(--color-primary, #1A3333);
 }
 
 .palette-one .mosaic__button.button:hover,
@@ -135,11 +135,11 @@
 
 .palette-two.mosaic__wrapper {
   color: var(--color-secondary-2, #4E5D78);
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
 }
 
 .palette-two .mosaic__item {
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
   border-color: var(--color-border-2, #FFFFFF47);
 }
 
