--- a/assets/product-page.css
+++ b/assets/product-page.css
@@ -107,31 +107,31 @@
 }
 
 .palette-one.product-main__holder {
-  color: var(--color-primary, #0B1A26);
+  color: var(--color-primary, #1A3333);
   background: var(--background-primary, #FFFFFF);
 }
 
 .palette-one .product-main__shipping-info,
 .palette-one .product-main__info .accordion__content {
-  color: var(--color-secondary, #4E5D78);
+  color: var(--color-secondary, #768585);
 }
 
 .palette-one .product-main__info .accordion {
-  border-top-color: var(--color-border, #0B1A2626);
+  border-top-color: var(--color-border, #1A333326);
 }
 
 .palette-one .product-main__info .accordion__item {
   border: none;
-  border-bottom: 1px solid var(--color-border, #0B1A2626);
+  border-bottom: 1px solid var(--color-border, #1A333326);
 }
 
 .palette-one .product-main__info .accordion__content {
-  color: var(--color-secondary, #4E5D78);
+  color: var(--color-secondary, #768585);
 }
 
 .palette-two.product-main__holder {
   color: var(--color-primary-2, #FFFFFF);
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
 }
 
 .palette-two .product-main__shipping-info,
