--- a/assets/products.css
+++ b/assets/products.css
@@ -15,7 +15,7 @@
 }
 
 .palette-two.products__wrapper {
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
 }
 
 @media (min-width: 1200px) {
