--- a/assets/search.css
+++ b/assets/search.css
@@ -28,7 +28,7 @@
 }
 
 .palette-two.search__wrapper {
-  background: var(--background-primary-2, #0B1A26);
+  background: var(--background-primary-2, #1A3333);
 }
 
 @media (min-width: 768px) {
