--- a/assets/tabs.css
+++ b/assets/tabs.css
@@ -124,28 +124,28 @@
 }
 
 .palette-one .tabs {
-  color: var(--color-secondary, #4E5D78);
+  color: var(--color-secondary, #768585);
 }
 
 .palette-one .tabs__trigger {
-  border-bottom-color: var(--color-border, #0B1A2626);
+  border-bottom-color: var(--color-border, #1A333326);
 }
 
 .palette-one .tabs__trigger:before {
-  background: var(--background-accent, #F4B841);
+  background: var(--background-accent, #1A3333);
 }
 
 .palette-one .tabs__heading {
-  color: var(--color-primary, #0B1A26);
+  color: var(--color-primary, #1A3333);
 }
 
 .palette-one .tabs__image-wrapper.no-image {
-  background: var(--color-image-placeholder, #0B1A2626);
+  background: var(--color-image-placeholder, #1A333326);
 }
 
 .palette-one .tabs__select-opener,
 .palette-one .tabs__select-drop {
-  border-color: var(--color-border, #0B1A2626);
+  border-color: var(--color-border, #1A333326);
 }
 
 .palette-two .tabs {
@@ -203,7 +203,7 @@
   }
 
   .palette-one .tabs__trigger {
-    border-color: var(--color-border, #0B1A2626);
+    border-color: var(--color-border, #1A333326);
   }
 
   .palette-two .tabs__trigger {
