--- a/snippets/date-picker.liquid
+++ b/snippets/date-picker.liquid
@@ -10,60 +10,46 @@
 
     {%- if color_palette == "one" -%}
       {%- if settings.background != blank -%}
-        --date-picker-background-color: {{- settings.background -}};
+        --date-picker-background-color: var(--background-primary, #FFFFFF);
       {%- endif -%}
 
       {%- if settings.primary_color != blank -%}
-        --date-picker-text-color: {{- settings.primary_color -}};
-        --date-picker-placeholder-color: {{- settings.primary_color | append: "73" -}};
-        --date-picker-section-border: 1px solid {{ settings.primary_color | append: "26" }};
+        --date-picker-text-color: var(--color-primary, #1A3333);
+        --date-picker-placeholder-color: var(--color-placeholder, #1A333359);
+        --date-picker-section-border: 1px solid var(--color-border, #1A333326);
       {%- endif -%}
 
       {%- if settings.accent_background != blank -%}
-        --date-picker-cleanstate-background-color: {{- settings.accent_background -}};
-        --date-picker-box-shadow: 0 0 0 1px {{ settings.accent_background }};
-      {%- else -%}
-        --date-picker-cleanstate-background-color: {{- branding_color -}};
-        --date-picker-box-shadow: 0 0 0 1px {{ branding_color }};
+        --date-picker-cleanstate-background-color: var(--background-accent, #1A3333);
+        --date-picker-box-shadow: 0 0 0 1px var(--background-accent, #1A3333);
       {%- endif -%}
 
       {%- if settings.accent_color != blank -%}
-        --date-picker-icon-color: {{- settings.accent_color -}};
-        --date-picker-cleanstate-text-color: {{- settings.accent_color -}};
-        --color-accent-foreground: {{- settings.accent_color -}};
-      {%- else -%}
-        --date-picker-icon-color: {%- if settings.primary_color != blank -%}{{- settings.primary_color -}}{%- endif -%};
-        --date-picker-cleanstate-text-color: {%- if settings.primary_color != blank -%}{{- settings.primary_color -}}{%- endif -%};
-        --color-accent-foreground: {%- if settings.primary_color != blank -%}{{- settings.primary_color -}}{%- endif -%};
+        --date-picker-icon-color: var(--background-accent, #FFFFFF);
+        --date-picker-cleanstate-text-color: var(--background-accent, #FFFFFF);
+        --color-accent-foreground: var(--background-accent, #FFFFFF);
       {%- endif -%}
 
     {%- elsif color_palette == "two" -%}
       {%- if settings.background_2 != blank -%}
-        --date-picker-background-color: {{- settings.background_2 -}};
+        --date-picker-background-color: var(--background-primary-2, #1A3333);
       {%- endif -%}
 
       {%- if settings.primary_color_2 != blank -%}
-        --date-picker-text-color: {{- settings.primary_color_2 -}};
-        --date-picker-placeholder-color: {{- settings.primary_color_2 | append: "73" -}};
-        --date-picker-section-border: 1px solid {{ settings.primary_color_2 | append: "47" }};
+        --date-picker-text-color: var(--color-primary-2, #FFFFFF);
+        --date-picker-placeholder-color: var(--color-placeholder-2, #FFFFFF59);
+        --date-picker-section-border: 1px solid var(--color-border-2, #FFFFFF26);
       {%- endif -%}
 
       {%- if settings.accent_background_2 != blank -%}
-        --date-picker-cleanstate-background-color: {{- settings.accent_background_2 -}};
-        --date-picker-box-shadow: 0 0 0 1px {{ settings.accent_background_2 }};
-      {%- else -%}
-        --date-picker-cleanstate-background-color: {{- branding_color -}};
-        --date-picker-box-shadow: 0 0 0 1px {{ branding_color }};
+        --date-picker-cleanstate-background-color: var(--background-accent-2, #FFFFFF);
+        --date-picker-box-shadow: 0 0 0 1px var(--background-accent-2, #FFFFFF);
       {%- endif -%}
 
       {%- if settings.accent_color_2 != blank -%}
-        --date-picker-icon-color: {{- settings.accent_color_2 -}};
-        --date-picker-cleanstate-text-color: {{- settings.accent_color_2 -}};
-        --color-accent-foreground: {{- settings.accent_color_2 -}};
-      {%- else -%}
-        --date-picker-icon-color: {%- if settings.primary_color_2 != blank -%}{{- settings.primary_color_2 -}}{%- endif -%};
-        --date-picker-cleanstate-text-color: {%- if settings.primary_color_2 != blank -%}{{- settings.primary_color_2 -}}{%- endif -%};
-        --color-accent-foreground: {%- if settings.primary_color_2 != blank -%}{{- settings.primary_color_2 -}}{%- endif -%};
+        --date-picker-icon-color: var(--background-accent-2, #1A3333);
+        --date-picker-cleanstate-text-color: var(--background-accent-2, #1A3333);
+        --color-accent-foreground: var(--background-accent-2, #1A3333);
       {%- endif -%}
     {%- endif -%}
   }
