--- a/snippets/variables-cart-services.liquid
+++ b/snippets/variables-cart-services.liquid
@@ -12,7 +12,7 @@
 
     {% if color_palette == "one" %}
       {% if settings.primary_color != blank %}
-        --service-checkbox-border: 1px solid var(--color-border, #0B1A2626);
+        --service-checkbox-border: 1px solid var(--color-border, #1A333326);
       {% endif %}
 
       {% if settings.background != blank %}
@@ -20,11 +20,11 @@
       {% endif %}
 
       {% if settings.accent_background != blank %}
-        --service-checkbox-color-checked: var(--background-accent, #F4B841);
+        --service-checkbox-color-checked: var(--background-accent, #1A3333);
       {% endif %}
 
       {% if settings.accent_color != blank %}
-        --service-checkbox-icon-color: var(--color-accent, #0B1A26);
+        --service-checkbox-icon-color: var(--color-accent, #FFFFFF);
       {% endif %}
 
     {% elsif color_palette == "two" %}
@@ -33,7 +33,7 @@
       {% endif %}
 
       {% if settings.background_2 != blank %}
-        --service-checkbox-color: var(--background-primary-2, #0B1A26);
+        --service-checkbox-color: var(--background-primary-2, #1A3333);
       {% endif %}
 
       {% if settings.accent_background_2 != blank %}
