--- a/snippets/variables-product-gallery.liquid
+++ b/snippets/variables-product-gallery.liquid
@@ -15,17 +15,17 @@
 
     {%- if color_palette == "one" -%}
       {%- if settings.primary_color != blank -%}
-        --product-gallery-preview-border: 1px solid var(--color-border, #0B1A2626);
-        --product-gallery-thumbnail-border: 1px solid var(--color-border, #0B1A2626);
+        --product-gallery-preview-border: 1px solid var(--color-border, #1A333326);
+        --product-gallery-thumbnail-border: 1px solid var(--color-border, #1A333326);
       {%- endif -%}
 
       {%- if settings.accent_background != blank -%}
-        --product-gallery-control-background-color: var(--background-accent, #F4B841);
-        --product-gallery-active-thumbnail-border: 1px solid var(--background-accent, #F4B841);
+        --product-gallery-control-background-color: var(--background-accent, #1A3333);
+        --product-gallery-active-thumbnail-border: 1px solid var(--background-accent, #1A3333);
       {%- endif -%}
 
       {%- if settings.accent_color != blank -%}
-        --product-gallery-control-icon-color: var(--color-accent, #0B1A26);
+        --product-gallery-control-icon-color: var(--color-accent, #FFFFFF);
       {%- endif -%}
 
     {%- elsif color_palette == "two" -%}
