--- a/snippets/variables-product-quantity.liquid
+++ b/snippets/variables-product-quantity.liquid
@@ -17,22 +17,22 @@
       {%- endif -%}
 
       {%- if settings.primary_color != blank -%}
-        --add-button-input-color: var(--color-primary, #0B1A26);
-        --add-button-control-button-color: var(--color-primary, #0B1A26);
-        --add-button-input-border: 1px solid var(--color-border, #0B1A2626);
+        --add-button-input-color: var(--color-primary, #1A3333);
+        --add-button-control-button-color: var(--color-primary, #1A3333);
+        --add-button-input-border: 1px solid var(--color-border, #1A333326);
       {%- endif -%}
 
       {%- if settings.accent_background != blank -%}
-        --add-button-button-color: var(--background-accent, #F4B841);
+        --add-button-button-color: var(--background-accent, #1A3333);
       {%- endif -%}
 
       {%- if settings.accent_color != blank -%}
-        --add-button-button-label-color: var(--color-accent, #0B1A26);
+        --add-button-button-label-color: var(--color-accent, #FFFFFF);
       {%- endif -%}
 
     {%- elsif color_palette == "two" -%}
       {%- if settings.background_2 != blank -%}
-        --add-button-input-background-color: var(--background-primary-2, #0B1A26);
+        --add-button-input-background-color: var(--background-primary-2, #1A3333);
       {%- endif -%}
 
       {%- if settings.primary_color_2 != blank -%}
