--- a/snippets/variables-product-variations.liquid
+++ b/snippets/variables-product-variations.liquid
@@ -17,16 +17,16 @@
       {%- endif -%}
 
       {%- if settings.primary_color != blank -%}
-        --variation-select-color: var(--color-primary, #0B1A26);
-        --variation-select-border: 1px solid var(--color-border, #0B1A2626);
-        --bundle-items-color: var(--color-primary, #0B1A26);
-        --bundle-items-image-border: 1px solid var(--color-border, #0B1A2626);
+        --variation-select-color: var(--color-primary, #1A3333);
+        --variation-select-border: 1px solid var(--color-border, #1A333326);
+        --bundle-items-color: var(--color-primary, #1A3333);
+        --bundle-items-image-border: 1px solid var(--color-border, #1A333326);
       {%- endif -%}
 
     {%- elsif color_palette == "two" -%}
       {%- if settings.background_2 != blank -%}
-        --variation-select-background-color: var(--background-primary-2, #0B1A26);
-        --bundle-items-background-color: var(--background-primary-2, #0B1A26);
+        --variation-select-background-color: var(--background-primary-2, #1A3333);
+        --bundle-items-background-color: var(--background-primary-2, #1A3333);
       {%- endif -%}
 
       {%- if settings.primary_color_2 != blank -%}
